deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitematic-api-service
  labels:
    app: kitematic
spec:
  selector:
    app: kitematic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
