deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitematic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kitematic.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kitematic-api-service
                port:
                  number: 80
